--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 
 <body onload="createMaze()">
+
+    <p id="para">Congratulations !!! YOU WON</p>
     <h1>Rat in a Maze</h1>
     <select id="levelselect">
         <option value="1">Level 1</option>
